-Now you can remove an area name.

2000-04-10 -David Faure <faure@kde.org>
---------------------------------------
-Improve error handling : don't abort if a cell is invalid
Still don't know why I get a row = -1 for a cell, but at least it loads.

2000-04-16 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Use kformula icon because they are more nice

2000-04-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add new mode : formular mode => now you can see formular in cell

2000-04-20 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-04-21 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add caption in kspread_dlg_layout, kspread_dlg_oszi

2000-04-29 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add two functions : sign which return -1 if number is negative, 1 if positive
and zero when it's null
and atan2
-Start to create help for kspread_dlg_formula
-Improved kspread_dlg_conditionnal

2000-04-30 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now remove AreaName when table target is removed
-Now "Show page Border" is saved
-Now init toggle button in initialPosition() because used QTimer::singleShot
=> all is init before change state of button.
-Add caption to kspread_dlg_format
-Add modal for all dialogbox (bug reported by jp.martin" <jpmartin@iroise.com>)

2000-05-01 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add modal for all MessageBox (bug reported by jp.martin" <jpmartin@iroise.com>)
-Now when you change boder color in toolbar all borders into area selected
changed (idea of jp.martin" <jpmartin@iroise.com>)
=>thanks to jp.martin
-Now undoLayout works 
-Bug Fix