@@ -372,10 +372,10 @@ public:
 
     void setSelectionFont( const QPoint &_marker, const char *_font = 0L, int _size = -1,
 			   signed char _bold = -1, signed char _italic = -1, signed char _underline = -1 );
-    void setSelectionMoneyFormat( const QPoint &_marker );
+    void setSelectionMoneyFormat( const QPoint &_marker,bool b );
     void setSelectionAlign( const QPoint &_marker, KSpreadLayout::Align _align );
     void setSelectionPrecision( const QPoint &_marker, int _delta );
-    void setSelectionPercent( const QPoint &_marker );
+    void setSelectionPercent( const QPoint &_marker, bool b );
     void setSelectionMultiRow( const QPoint &_marker, bool enable );
 
     void setSelectionTextColor( const QPoint &_marker, QColor tbColor );
